2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/WorkspaceItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs: Fix base directory
	  serialization.
	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs: Store and read
	  custom properties in solution folders.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/WorkspaceItem.cs,
	  MonoDevelop.Projects/SolutionFolder.cs,
	  MonoDevelop.Projects/SolutionEntityItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/IWorkspaceObject.cs: Allow setting the base
	  directory of items.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/WorkspaceItem.cs,
	  MonoDevelop.Projects/ProjectServiceExtension.cs,
	  MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/CustomCommandExtension.cs,
	  MonoDevelop.Projects/SolutionFolder.cs,
	  MonoDevelop.Projects/UnknownSolutionItem.cs,
	  MonoDevelop.Projects/Solution.cs,
	  MonoDevelop.Projects/IBuildTarget.cs,
	  MonoDevelop.Projects/ICompilerResult.cs,
	  MonoDevelop.Projects/BuildResult.cs,
	  MonoDevelop.Projects/IDotNetLanguageBinding.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/Workspace.cs,
	  MonoDevelop.Projects/DefaultCompilerResult.cs,
	  MonoDevelop.Projects/BuildTool.cs, MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildHandler.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  MonoDevelop.Projects.mdp,
	  MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs,
	  Makefile.am,
	  MonoDevelop.Projects.Extensions/SolutionItemHandler.cs,
	  MonoDevelop.Projects.Extensions/ISolutionItemHandler.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.